[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/game_log/game_log_panel.gd" id="1_log"]

[node name="GameLogPanel" type="Control"]
custom_minimum_size = Vector2(380, 250)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_log")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "游戏日志"

[node name="FilterButton" type="MenuButton" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
text = "过滤"

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/TitleRow"]
layout_mode = 2
text = "清空"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LogContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AutoScrollCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/BottomRow"]
layout_mode = 2
button_pressed = true
text = "自动滚动"

[node name="EntryCountLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "显示 0 / 0"
horizontal_alignment = 2
